src/objects/Zuora_API_Configuration__mdt.object
<CustomObject>
    <description>Zuora integration details.</description>
    <fields>
        <fullName>API_Url__c</fullName>
        <label>API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zuora API Configuration</label>
    <pluralLabel>Zuora API Configurations</pluralLabel>
</CustomObject>